--- a/tp3.tex
+++ b/tp3.tex
@@ -17,7 +17,8 @@
 \rhead{2R3}
 \cfoot{\thepage}
 \setlength{\headwidth}{\textwidth} % Hace que el ancho del encabezado coincida con el ancho del texto
-
+\setlength{\headheight}{15pt}  % Ajusta la altura del encabezado
+\setlength{\headsep}{20pt}     % Ajusta la separación entre el encabezado y el contenido
 
 \usepackage{titlesec}
 \titleformat{\chapter}[display]
@@ -43,6 +44,9 @@
 \renewcommand{\contentsname}{Tabla de Contenidos}
 
 \title{%
+\setlength{\headwidth}{\textwidth} % Hace que el encabezado tenga el mismo ancho que el contenido
+\setlength{\headheight}{15pt}  % Ajusta la altura del encabezado
+\setlength{\headsep}{10pt}     % Ajusta la separación entre el encabezado y el contenido
   \fontsize{25}{0}\selectfont Universidad Tecnológica Nacional \\
   \fontsize{22}{30}\selectfont Analisis de Señales y Sistemas \\
   \fontsize{20}{25}\selectfont Trabajo Practico 3
@@ -62,6 +66,7 @@ Leonardo Ramos\\
 
 \maketitle
 \tableofcontents
+\thispagestyle{plain}
 
 \chapter{Ejercicio 1}
 Graficar ambas señales superpuestas, y verificar cuántas muestras de tiempo discreto se corresponden con el rango de
