Escribe el primer apartado Ej3

--- a/tp3.tex
+++ b/tp3.tex
@@ -180,13 +180,25 @@ depósito mensual constante en el mes $n$ de \$10, $r$ es la tasa de interés en
 inmediatamente después del depósito en el periodo.
 
 \begin{enumerate}[label=\alph*), left=0pt]
-  \item \fs{} Identificar en el problema las variables de entrada y salida del mismo.
-    % graficar sistema
 
+  % Apartado a
+  \item \fs{} Identificar en el problema las variables de entrada y salida del mismo.
+
+    Las variables de entrada son: 
+      \begin{enumerate}[label=$\bullet$]
+        \item Mes [n]
+        \item Tasa de interes [r]
+        \item Deposito en el periodo [$y_{n-1}$]
+      \end{enumerate}
+
+    La variable de salida seria el deposito mensual en el mes n.
+  %Apartado b
   \item \fs{} Plantear un modelo en ecuaciones de diferencias capaz de caracterizar el sistema propuesto.
 
+  %Apartado c
   \item \fs{} Representar la ecuación en diferencias por medio de un diagrama de bloques con retardos unitarios.
 
+  %Apartado d
   \item \fs{} Evaluar el saldo para un periodo de capitalización de 48 meses.
 \end{enumerate}
 
