--- a/tp3.tex
+++ b/tp3.tex
@@ -3,7 +3,7 @@
 \usepackage{enumitem} %permite el uso de letras para enumerar
 
 \usepackage{amsmath}%para entornos de alineacion
-\setlength{\jot}{7pt}%modifica el interlineado
+\setlength{\jot}{8pt}%modifica el interlineado
 
 \usepackage{tikz} %Libreria para graficos
 \usetikzlibrary{calc, arrows.meta, positioning}
@@ -143,7 +143,24 @@ Considerar el siguiente sistema de tiempo discreto:
       h[n]&=\sum_{k=0}^n 3^{-k}k - \sum_{k=0}^n 3^{-k} - \sum_{k=0}^n 2^{-k}
     \end{align*}
 
-    Calcular la respuesta del sistema al escalón unitario.
+    La serie geometrica:
+    $$\sum_{k=0}^{n} r^k = \frac{1-r^{n+1}}{1-r} $$
+    Va a ayudarnos a resolver la segunda y tercera sumatoria. Sin embargo, para la primera vamos a necesitar
+    manipularla.\\
+    Primero derivamos la expresión anterior respecto a r.
+    $$\sum_{k=0}^{n} kr^{k-1} = \frac{1-(n+1)r^{n} + nr^{n+1}}{(1-r)^2}$$
+    Y finalmente multiplicamos por r.
+    $$\sum_{k=0}^{n} kr^k = \frac{r-(n+1)r^{n+1} + nr^{n+2}}{(1-r)^2}$$
+    Con estos resultados, podemos continuar el desarrollo.
+
+    \begin{align*}
+      h[n] &= \frac{\frac{1}{3}-(n+1)\left(\frac{1}{3}\right)^{n+1} + n\left(\frac{1}{3}\right)^{n+2}}{\left(1-\frac{1}{3}\right)^2} -
+      \frac{1-\left(\frac{1}{3}\right)^{n+1}}{1-\frac{1}{3}} - \frac{1-\left(\frac{1}{2}\right)^{n+1}}{1-\frac{1}{2}}\\
+      h[n] &= -\frac{11}{4}-\frac{9}{4}(n+1)\left(\frac{1}{3}\right)^{n+1} + \frac{9}{4}n\left(\frac{1}{3}\right)^{n+2} -
+      \frac{3}{2} \left(\frac{1}{3} \right)^{n+1} - 2 \left(\frac{1}{2}\right)^{n+1}
+    \end{align*}
+
+    calcular la respuesta del sistema al escalón unitario.
 
   \item \fs{} Si $h_1[n] = 2^{-n} u[n]$, $h_2[n] = \delta[n]$, $h_3[n] = h_4[n] = 3^{-n} u[n]$:
 
