Corrige primer apartado

--- a/tp3.tex
+++ b/tp3.tex
@@ -184,14 +184,9 @@ inmediatamente después del depósito en el periodo.
   % Apartado a
   \item \fs{} Identificar en el problema las variables de entrada y salida del mismo.
 
-    Las variables de entrada son: 
-      \begin{enumerate}[label=$\bullet$]
-        \item Mes [n]
-        \item Tasa de interes [r]
-        \item Deposito en el periodo [$y_{n-1}$]
-      \end{enumerate}
+    La variable de entrada seria el mes en el que se hace el deposito, $n$.
 
-    La variable de salida seria el deposito mensual [$y_n$].
+    La variable de salida seria el ahorro acumulado hasta el mes $n$, $y[n]$.
   %Apartado b
   \item \fs{} Plantear un modelo en ecuaciones de diferencias capaz de caracterizar el sistema propuesto.
 
