Escribe el segundo apartado Ej3

--- a/tp3.tex
+++ b/tp3.tex
@@ -190,6 +190,21 @@ inmediatamente después del depósito en el periodo.
   %Apartado b
   \item \fs{} Plantear un modelo en ecuaciones de diferencias capaz de caracterizar el sistema propuesto.
 
+    El modelo en ecuaciones de diferencias que se plantea es el siguiente:
+
+    $$y[n] = x[n] + r \cdot y[n-1]$$
+
+    Haciendo $x[n] = 10$ y $r = 1.1$, obtenemos el siguiente grafico:
+
+    \begin{figure}[H]
+      \centering
+      \begin{minipage}{0.55\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej3.1.png}
+        \textit{Ahorro acumulado en un periodo de 12 meses}
+      \end{minipage}
+    \end{figure}
+
   %Apartado c
   \item \fs{} Representar la ecuación en diferencias por medio de un diagrama de bloques con retardos unitarios.
 
