--- a/tp3.tex
+++ b/tp3.tex
@@ -1,8 +1,11 @@
 \documentclass[a4paper,12pt]{report}
 \usepackage[utf8]{inputenc}
 \usepackage{enumitem} %permite el uso de letras para enumerar
+\usepackage{graphicx} %para las imagenes
+\usepackage{float} %para fijar las imagenes
 
 \usepackage{amsmath}%para entornos de alineacion
+\usepackage{amsfonts}%para las letras lindas de matematica
 \setlength{\jot}{8pt}%modifica el interlineado
 
 \usepackage{tikz} %Libreria para graficos
@@ -160,7 +163,33 @@ Considerar el siguiente sistema de tiempo discreto:
       \frac{3}{2} \left(\frac{1}{3} \right)^{n+1} - 2 \left(\frac{1}{2}\right)^{n+1}
     \end{align*}
 
-    calcular la respuesta del sistema al escalón unitario.
+    La respuesta al escalon unitario esta definida por:
+    \begin{align*}
+      y[n] &= \mu[n] * h[n]\\[6pt]
+      y[n] &= \sum_{k \exists \mathbb{Z}} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3^{(k+1)}} -
+        \frac{9}{4 \cdot 3^{(k+1)}} + \frac{3}{2 \cdot 3^{(k+1)}} + \frac{2}{2^{(k+1)}} \cdot \mu[k] \cdot \mu[n-k]\\[6pt]
+      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3 \cdot 3^k} -
+        \frac{9}{4 \cdot 3 \cdot 3^k} + \frac{3}{2 \cdot 3 \cdot 3^k} + \frac{2}{2 \cdot 2^k}\\[6pt]
+      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{3k}{4 \cdot 3^k} -
+        \frac{3}{4 \cdot 3^k} + \frac{1}{2 \cdot 3^k} + \frac{1}{2^k}
+    \end{align*}
+
+    El desarrollo, ademas de largo, es engorroso y carece de la aplicacion de alguna propiedad importante o identidad
+    no vista. Todos los terminos de la suma usan o la identidad de la serie trigonometrica, su derivada, o la identidad
+    de una sumatoria constante. Como resultado, se obtiene lo siguiente:
+    \begin{equation*}
+      y[n] = \frac{5}{4} - \frac{11}{4} \cdot (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 \cdot (n+1)}{8 \cdot 3^n} -
+        \frac{1}{2^n}
+    \end{equation*}
+
+    \begin{figure}[H]
+      \centering
+      \begin{minipage}{0.55\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej2.1.png}
+        \textit{Grafica con las tres funciones discretas.}
+      \end{minipage}
+    \end{figure}
 
   \item \fs{} Si $h_1[n] = 2^{-n} u[n]$, $h_2[n] = \delta[n]$, $h_3[n] = h_4[n] = 3^{-n} u[n]$:
 
