--- a/tp3.tex
+++ b/tp3.tex
@@ -147,13 +147,19 @@ Considerar el siguiente sistema de tiempo discreto:
     \end{align*}
 
     La serie geometrica:
-    $$\sum_{k=0}^{n} r^k = \frac{1-r^{n+1}}{1-r} $$
+    \begin{equation}
+      \label{s.geometrica}
+      \sum_{k=0}^{n} r^k = \frac{1-r^{n+1}}{1-r}
+    \end{equation}
     Va a ayudarnos a resolver la segunda y tercera sumatoria. Sin embargo, para la primera vamos a necesitar
     manipularla.\\
     Primero derivamos la expresión anterior respecto a r.
     $$\sum_{k=0}^{n} kr^{k-1} = \frac{1-(n+1)r^{n} + nr^{n+1}}{(1-r)^2}$$
     Y finalmente multiplicamos por r.
-    $$\sum_{k=0}^{n} kr^k = \frac{r-(n+1)r^{n+1} + nr^{n+2}}{(1-r)^2}$$
+    \begin{equation}
+      \label{s.geometrica.deriv}
+      \sum_{k=0}^{n} kr^k = \frac{r-(n+1)r^{n+1} + nr^{n+2}}{(1-r)^2}
+    \end{equation}
     Con estos resultados, podemos continuar el desarrollo.
 
     \begin{align*}
@@ -166,19 +172,20 @@ Considerar el siguiente sistema de tiempo discreto:
     La respuesta al escalon unitario esta definida por:
     \begin{align*}
       y[n] &= \mu[n] * h[n]\\[6pt]
-      y[n] &= \sum_{k \exists \mathbb{Z}} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3^{(k+1)}} -
-        \frac{9}{4 \cdot 3^{(k+1)}} + \frac{3}{2 \cdot 3^{(k+1)}} + \frac{2}{2^{(k+1)}} \cdot \mu[k] \cdot \mu[n-k]\\[6pt]
-      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3 \cdot 3^k} -
-        \frac{9}{4 \cdot 3 \cdot 3^k} + \frac{3}{2 \cdot 3 \cdot 3^k} + \frac{2}{2 \cdot 2^k}\\[6pt]
-      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} -\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{3k}{4 \cdot 3^k} -
-        \frac{3}{4 \cdot 3^k} + \frac{1}{2 \cdot 3^k} + \frac{1}{2^k}
+      y[n] &= \sum_{k \exists \mathbb{Z}} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3^{(k+1)}} -
+        \frac{9}{4 \cdot 3^{(k+1)}} + \frac{3}{2 \cdot 3^{(k+1)}} + \frac{2}{2^{(k+1)}} \right) \cdot \mu[k] \cdot \mu[n-k]\\[6pt]
+      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{9k}{4 \cdot 3 \cdot 3^k} -
+        \frac{9}{4 \cdot 3 \cdot 3^k} + \frac{3}{2 \cdot 3 \cdot 3^k} + \frac{2}{2 \cdot 2^k} \right)\\[6pt]
+      y[n] &= \mu[n] \cdot \sum_{k=0}^{n} \left(-\frac{11}{4} - \frac{5k}{4 \cdot 3^k} + \frac{3k}{4 \cdot 3^k} -
+        \frac{3}{4 \cdot 3^k} + \frac{1}{2 \cdot 3^k} + \frac{1}{2^k}\right)
     \end{align*}
 
     El desarrollo, ademas de largo, es engorroso y carece de la aplicacion de alguna propiedad importante o identidad
-    no vista. Todos los terminos de la suma usan o la identidad de la serie trigonometrica, su derivada, o la identidad
-    de una sumatoria constante. Como resultado, se obtiene lo siguiente:
+    no vista. Todos los terminos de la suma usan o la identidad de la serie trigonometrica (\ref{s.geometrica}), su
+    derivada (\ref{s.geometrica.deriv}), o la identidad de una sumatoria constante. Como resultado, se obtiene lo
+    siguiente:
     \begin{equation*}
-      y[n] = \frac{5}{4} - \frac{11}{4} \cdot (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 \cdot (n+1)}{8 \cdot 3^n} -
+      y[n] = \frac{5}{4} - \frac{11}{4} (n+1) + \frac{5n + 1}{8 \cdot 3^n} + \frac{3 (n+1)}{8 \cdot 3^n} -
         \frac{1}{2^n}
     \end{equation*}
 
@@ -193,8 +200,52 @@ Considerar el siguiente sistema de tiempo discreto:
 
   \item \fs{} Si $h_1[n] = 2^{-n} u[n]$, $h_2[n] = \delta[n]$, $h_3[n] = h_4[n] = 3^{-n} u[n]$:
 
-    Calcular la respuesta al impulso del sistema. \\
-    Calcular la respuesta del sistema al escalón unitario.
+    La respuesta al impulso del sistema corresponde a:
+    {
+      \allowdisplaybreaks
+      \begin{align*}
+        h[n] &= (h_1[n] * h_2[n] - h_4[n]) * h_3[n]\\[6pt]
+        h[n] &= (2^{-n} \mu[n] * \delta[n] - 3^{-n} \mu[n]) * 3^{-n} \mu[n]\\[6pt]
+        h[n] &= (2^{-n} \mu[n] * 3^{-n} \mu[n] - 3^{-n} \mu[n] * 3^{-n} \mu[n])\\[6pt]
+        h[n] &= \sum_{k \exists \mathbb{Z}} \left(2^{-k} \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k] - \sum_{k \exists \mathbb{Z}} \left( 3^{-k}
+          \cdot 3^{-(n-k)} \right) \cdot \mu[k] \cdot \mu[n-k]\\
+        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(2^{-k} \cdot 3^k\right) - 3^{-n} \cdot \mu[n] \sum_{k=0}^n \left(3^{-k} \cdot 3^{k}\right)\\[6pt]
+        h[n] &= 3^{-n} \cdot \mu[n] \sum_{k = 0}^n \left(\frac{3}{2}\right)^{k} - 3^{-n} \cdot \mu[n] \sum_{k=0}^n 1
+      \end{align*}
+    }
+
+    Aplicando la serie trigonometrica (\ref{s.geometrica}) y la serie de una constante, se obtiene el siguiente
+    resultado:
+
+    \begin{equation*}
+      h[n] = -3^{-n} \left(2\left(1 - \left(\frac{3}{2}\right)^{n+1} \right) + (n+1)\right) \mu[n]
+    \end{equation*}
+
+    La respuesta al escalón unitario esta definida por:
+    \begin{align*}
+      y[n] &= \mu[n] * h[n]\\[6pt]
+      y[n] &= \sum_{k \exists \mathbb{Z}} \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
+        n \cdot 3^{-n} - 3^{-n}\right)\mu[k] \cdot \mu[n-k]\\[6pt]
+        y[n] &= \mu[n] \sum_{k=0}^n \left(-2 \cdot 3^{-k} + 2 \cdot 3^{-n} \cdot \left(\frac{3}{2}\right)^{n+1} -
+        n \cdot 3^{-n} - 3^{-n}\right)
+    \end{align*}
+
+    Nuevamente, aplicando las identidades de la serie geometrica (\ref{s.geometrica}), su derivada (\ref{s.geometrica.deriv})
+    y la serie de una constante, se obtiene que:
+    \begin{equation*}
+      y[n] = \left(-9 \frac{1-\left(\frac{1}{3}\right)^{n+1}}{2} + 6 \left(1 - \left(\frac{1}{2}\right)^{n+1}\right) -
+        \left(\frac{\frac{1}{3} - n\left(\frac{1}{3}\right)^{n} + (n-1) \left(\frac{1}{3}\right)^{n+1}}{\left(1-\frac{1}{3}\right)^{2}}+3^{-n}\cdot n\right)\right)
+    \end{equation*}
+
+    \begin{figure}[H]
+      \centering
+      \begin{minipage}{0.55\textwidth}
+        \centering
+        \includegraphics[width=1\textwidth]{./images/ej2.2.png}
+        \textit{Grafica con las tres funciones discretas.}
+      \end{minipage}
+    \end{figure}
+
 \end{enumerate}
 
 \chapter{Ejercicio 3}
