Agrega puntos de nodos en grafico de diferencias

--- a/tp3.tex
+++ b/tp3.tex
@@ -272,6 +272,8 @@ cantidad de operaciones posibles.
         \node [coordinate, on grid, right=5cm of sum3](output){};
         \node [connector, on grid, right=1cm of sum3](punto1){};
         \node [coordinate, on grid, below=3cm of punto1](elbowOutput1){};
+        \node [connector, on grid, below=3cm of sum2](nodo1){};
+        \node [connector, on grid, above=3.4cm of sum1](nodo1){};
 
         % Lines
         \draw [-] (input) -- node{$x_n(n)$} (elbowInput1);
